--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="inner">
 
         <header>
-          <h1><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 2000 2000">
+          <h1><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1500 1800">
     <g transform="translate(0, 100) rotate(-10)">
  <path id="lens"
         d="
@@ -63,9 +63,11 @@
                           calcMode = "spline"
                           keySplines = "0.25 0.1 0.25 1"
                           keyTimes = "0;1"
-                          repeatCount="1"/>
+                          repeatCount="indefinite"/>
     </path>
-      <g id="brand" transform="scale(0)"><text transform="rotate(10)" x="250" font-family="sans serif" font-size="60px" y="100">DATA</text><text  transform="rotate(10)" x="440" y="100" font-family="sans serif" font-size="60px" fill="#47b749">RPM</text>
+      <g id="brand" transform="scale(0)">
+      <text transform="rotate(10)" x="250" font-family="sans serif" font-size="60px" y="100">DATA</text>
+      <text  transform="rotate(10)" x="440" y="100" font-family="sans serif" font-size="60px" fill="#47b749">RPM</text>
         <animateTransform id="anim3" attributeName="transform" 
                           attributeType="XML"
                           type="scale"
