--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                           calcMode = "spline"
                           keySplines = "0.25 0.1 0.25 1"
                           keyTimes = "0;1"
-                          repeatCount="indefinite"/>
+                          repeatCount="1"/>
     </path>
       <g id="brand" transform="scale(0)">
       <text transform="rotate(10)" x="250" font-family="sans serif" font-size="60px" y="100">DATA</text>
