--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="inner">
 
         <header>
-          <h1><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1500 1800">
+          <h1 style="height: 300px;"><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1500 1500" height="500">
     <g transform="translate(0, 100) rotate(-10)">
  <path id="lens"
         d="
@@ -80,7 +80,7 @@
       </g>  
     </g>
   </svg></h1>
-          <h2>Animative DataRPM logo</h2>
+          <h2 style="text-align: center;">Animative DataRPM logo</h2>
         </header>
 </div>
     </div>
