Under note added

--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
     </g>
   </svg></h1>
           <h2 style="text-align: center;">Animative DataRPM logo</h2>
+          <h3 style="text-align: center;">Under the hood</h3>
+          <p style="text-align: center;">No javascript or CSS is involved. The simple animation happens on pure SVG and SMIL animation only.</p>
         </header>
 </div>
     </div>
