click event added

--- a/index.html
+++ b/index.html
@@ -46,14 +46,37 @@
        stroke="#fff"
        stroke-width="10"
        stroke-linecap="round"
-      ><animateTransform id="anim1" attributeName="transform" 
+      >
+        <animateTransform id="anim0"                                               
+                          attributeName="transform" 
+                          attributeType="XML"
+                          type="rotate"
+                          begin="logo1.click"
+                          from="0, 230, 175" 
+                          to="-180, 230, 175" 
+                          dur="1s"
+                          fill="freeze"
+                          repeatCount="1"/>
+        <animateTransform id="anim01" attributeName="transform" 
+                          attributeType="XML"
+                          type="rotate" 
+                          begin="anim0.end"
+                          from="-180, 230, 175" 
+                          to="0, 230, 175" 
+                          dur="1s"
+                          fill="freeze"
+                          calcMode = "spline"
+                          keySplines = "0.25 0.1 0.25 1"
+                          keyTimes = "0;1"
+                          repeatCount="1"/>
+            <animateTransform id="anim1" attributeName="transform" 
                           attributeType="XML"
                           type="rotate" 
                           from="0, 230, 175" 
                           to="-180, 230, 175" 
                           dur="1s"
                           repeatCount="1"/>
-    <animateTransform id="anim2" attributeName="transform" 
+            <animateTransform id="anim2" attributeName="transform" 
                           attributeType="XML"
                           type="rotate" 
                           begin="anim1.end"
