Added foot note on click event

--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
           <h2 style="text-align: center;">Animative DataRPM logo</h2>
           <h3 style="text-align: center;">Under the hood</h3>
           <p style="text-align: center;">No javascript or CSS is involved. The simple animation happens on pure SVG and SMIL animation only.</p>
+          <p style="text-align: center;">There is a click event on the logo. Click to see the animation. Even the click event is attached on SVG. No Javascript event or handlers.</p>
         </header>
       </div>
     </div>
