height and width assigned for mozilla

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <header>
           <h1 style="height: 140px;">
-            <svg version="1.1" id="logo1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="400 10 600 500">
+            <svg version="1.1" id="logo1" width="600" height="150" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="400 10 600 500">
               <g transform="translate(0, 100) rotate(-10)">
                 <path id="lens"
                       d="
